--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,11 @@ dependencies {
 
 	// query 값 정렬
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 tasks.named('bootBuildImage') {
