--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 	implementation 'io.lettuce:lettuce-core'
 
 	implementation 'com.opencsv:opencsv:5.5.2'
+
+	implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('bootBuildImage') {
