26 feat 사용자에게 맞는 알고리즘 문제 추천 (#42)
* refactor: 블로그 타입 추가 (#27)

* refactor: 블로그 타입 추가 (#27)

* feat: 백준에 필요한 유저정보 크롤링하여 객체 저장 (#26)

* feat: lambda함수를 호출하여 사용자 기반 문제 추천리스트 반환 (#26)

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'io.lettuce:lettuce-core'
+	
+	// jsoup
+	implementation 'org.jsoup:jsoup:1.15.4'
 }
 
 tasks.named('bootBuildImage') {
