--- a/.github/workflow/develop-ecs.yml
+++ b/.github/workflow/develop-ecs.yml
@@ -1,16 +1,22 @@
-name: Deploy Development Server
+name: Deploy Server
 
 on:
   push:
     branches: [ "develop" ]
 
 env:
-  AWS_REGION: ap-northeast-2                  # 서울 REGION
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # 1.AWS ECR 이름
-  ECS_SERVICE: MY_ECS_SERVICE                 # 5.AWS의 ECS 클러스터의 SERVICE 이름
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # 4.AWS ECS 클러스터 이름
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # 3.정의한 ECS TASK 이름
-  CONTAINER_NAME: MY_CONTAINER_NAME           # 2.ECR의 컨테이너 이름
+  # 서울 REGION
+  AWS_REGION: ap-northeast-2
+  # 1.AWS ECR 이름
+  ECR_REPOSITORY: 100shot-ecr
+  # 5.AWS의 ECS 클러스터의 SERVICE 이름
+  ECS_SERVICE: 100shot-backend-service
+  # 4.AWS ECS 클러스터 이름
+  ECS_CLUSTER: taveshot-cluster
+  # 3.정의한 ECS TASK 이름
+  ECS_TASK_DEFINITION: ./aws/task_definition.json
+  # 2.ECR의 컨테이너 이름
+  CONTAINER_NAME: 100shot-backend
 
 permissions:
   contents: read
@@ -24,6 +30,33 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Set environment variables
+        run: |
+          echo "GH_REDIRECT_URI=${{ secrets.GH_REDIRECT_URI }}" >> $GITHUB_ENV
+          echo "GH_CLIENT_ID=${{ secrets.GH_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "GH_CLIENT_SECRET=${{ secrets.GH_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}" >> $GITHUB_ENV
+          echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" >> $GITHUB_ENV
+          echo "SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }}" >> $GITHUB_ENV
+          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}" >> $GITHUB_ENV
+          echo "GOOGLE_SECRET_KEY=${{ secrets.GOOGLE_SECRET_KEY }}" >> $GITHUB_ENV
+          echo "GOOGLE_CX=${{ secrets.GOOGLE_CX }}" >> $GITHUB_ENV
+          echo "LAMBDA_SECRET_URL1=${{ secrets.LAMBDA_SECRET_URL1 }}" >> $GITHUB_ENV
+          echo "LAMBDA_SECRET_URL2=${{ secrets.LAMBDA_SECRET_URL2 }}" >> $GITHUB_ENV
+          echo "S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}" >> $GITHUB_ENV
+          echo "S3_BUCKET=${{ secrets.S3_BUCKET }}" >> $GITHUB_ENV
+          echo "S3_DIR_NAME=${{ secrets.S3_DIR_NAME }}" >> $GITHUB_ENV
+
+      - name: Build with Gradle
+        run: ./gradlew bootJar
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -42,9 +75,6 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
